# svk_forescast

./: .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
data/raw/esett/area=SE3/year=2023/month=01/: part.parquet
exports/: esett_SE3_2023-01-01_2023-01-02.json
notebooks/: EDA_och_baslines.ipynb  modell.ipynb
notebooks/outputs/eda_final/: baselines_all.csv  correlations_overall_per_area.csv
notebooks/outputs/sprint2/: model_cv_results.csv
outputs/sprint2/: backtest_lastfold.csv
scripts/: build_dataset.py  build_training_frame.py  check_full_coverage.py  ingest_esett.py  qa_report.py  run_all.py  verify_processed.py
src/: io_esett.py  io_smhi.py
src/features/: calendar.py
